<?xml version="1.0"?>
<package>
  <name>ladybug_slam</name>
  <version>1.0.2</version>
  <description>
	This node aims to perform SLAM with LADYBUG IMAGES.
  </description>

	<maintainer email="marco.lapolla5@gmail.com">Marco Lapolla</maintainer>

	<license>GNU</license>

	<author email="marco.lapolla5@gmail.com">Marco Lapolla</author>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>message_generation</build_depend>
	<build_depend>roslaunch</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>cv_bridge</build_depend>
	<build_depend>image_transport</build_depend>
	<build_depend>ladybug_msgs</build_depend>
	<build_depend>ladybug_slam_lib</build_depend>
	<build_depend>octomap_ros</build_depend>
  
  
	<run_depend>roscpp</run_depend>
	<run_depend>rospy</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>message_runtime</run_depend>
	<run_depend>ladybug_msgs</run_depend>
	<run_depend>ladybug_slam_lib</run_depend>
	<run_depend>octomap_ros</run_depend>

	<export>
		<!-- Other tools can request additional information be placed here -->
	</export>
</package>
